# substrate_learn

./: Cargo.toml
course_3/src/: main.rs
course_4/: Cargo.toml
course_4/src/: cli.yml  main.rs
course_5/pallets/erc20/: Cargo.toml
course_5/pallets/erc20/src/: lib.rs
course_5/runtime/src/: lib.rs
