[package]
name = "course_4"
version = "0.1.0"
authors = ["liuhuan <liuhuancom@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# clap = {version = "~2.33.0", features = ["yaml"]}
# clap = "~2.33.0"
structopt = { version = "~0.3", default-features = false }




